samples/_failures_safe/1761402216_be7e16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bddd2398.c: In function ‘main’:
./samples/SAFE/__tmp_bddd2398.c:165:5: error: expected identifier or ‘(’ at end of input
  165 |     TokenHandler
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_bddd2398.c:165:5: error: expected declaration or statement at end of input
